--- a/.jshintrc
+++ b/.jshintrc
@@ -1,13 +1,18 @@
 {
-    "browser": true,
-    "curly": true,
-    "eqeqeq": true,
-    "freeze": true,
-    "indent": 4,
-    "latedef": true,
-    "newcap": true,
-    "quotmark": true,
-    "strict": true,
-    "undef": true,
-    "unused": true
+  "browser": true,
+  "camelcase": true,
+  "curly": true,
+  "eqeqeq": true,
+  "freeze": true,
+  "immed": true,
+  "latedef": "nofunc",
+  "laxcomma": true,
+  "maxparams": 8,
+  "newcap": true,
+  "noarg": true,
+  "esnext": true,
+  "node": true,
+  "predef": ["require", "jQuery", "$", "YT", "SimpleSwipe"],
+  "strict": true,
+  "undef": true
 }
